--- a/charts/mgt-hub/openshift-data-foundations/templates/odf-storagecluster.yaml
+++ b/charts/mgt-hub/openshift-data-foundations/templates/odf-storagecluster.yaml
@@ -64,14 +64,7 @@ spec:
     kms: {}
   externalStorage: {}
   flexibleScaling: true
-  resources:
-    mds:
-      limits:
-        cpu: "3"
-        memory: "8Gi"
-      requests:
-        cpu: "3"
-        memory: "8Gi"
+  resources: {}
   monDataDirHostPath: /var/lib/rook
   managedResources:
     cephBlockPools:
