Yaptığınız değişikliğe dair açıklayıcı bir mesaj

--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -67,11 +67,11 @@ clusterGroup:
       channel: stable
       csv: local-storage-operator.v4.14.0-202407021509
 
-    odf:
-      name: odf-operator
-      namespace: openshift-storage
-      channel: stable-4.14
-      csv: odf-operator.v4.14.9-rhodf
+      #    odf:
+      #      name: odf-operator
+      #      namespace: openshift-storage
+      #      channel: stable-4.14
+      #      csv: odf-operator.v4.14.9-rhodf
 
     cnv:
       name: kubevirt-hyperconverged
