--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -67,11 +67,11 @@ clusterGroup:
       #      channel: stable
       #      csv: local-storage-operator.v4.14.0-202407021509
 
-      #    odf:
-      #      name: odf-operator
-      #      namespace: openshift-storage
-      #      channel: stable-4.14
-      #      csv: odf-operator.v4.14.9-rhodf
+    odf:
+      name: odf-operator
+      namespace: openshift-storage
+      channel: stable-4.14
+      csv: odf-operator.v4.14.9-rhodf
 
       #    cnv:
       #      name: kubevirt-hyperconverged
@@ -171,11 +171,11 @@ clusterGroup:
           jsonPointers:
             - /spec/loggingCA
 
-    drtest:
-      name: drtest
-      namespace: open-cluster-management-backup
-      project: hub
-      path: charts/mgt-hub/drtest
+              #drtest:
+              #name: drtest
+              #namespace: open-cluster-management-backup
+              #project: hub
+              #path: charts/mgt-hub/drtest
 
     mce:
       name: mce
@@ -189,11 +189,11 @@ clusterGroup:
       path: charts/mgt-hub/nmstate
       project: hub
 
-    cnv:
-      name: kubevirt-hyperconverged
-      namespace: openshift-cnv
-      path: charts/mgt-hub/cnv
-      project: hub
+      #cnv:
+      #name: kubevirt-hyperconverged
+      #namespace: openshift-cnv
+      #path: charts/mgt-hub/cnv
+      #project: hub
 
     odf:
       name: odf
@@ -201,17 +201,17 @@ clusterGroup:
       path: charts/mgt-hub/openshift-data-foundations
       project: hub
 
-    lso:
-      name: local-storage
-      namespace: openshift-local-storage
-      path: charts/mgt-hub/lso
-      project: hub
+      #lso:
+      #name: local-storage
+      #namespace: openshift-local-storage
+      #path: charts/mgt-hub/lso
+      #project: hub
 
-    quay:
-      name: quay
-      namespace: quay-enterprise
-      path: charts/mgt-hub/quay
-      project: hub
+      #quay:
+      #      name: quay
+      #namespace: quay-enterprise
+      #path: charts/mgt-hub/quay
+      #project: hub
 
       #    kafka:
       #      name: kafka
