--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -67,11 +67,11 @@ clusterGroup:
       channel: stable
       csv: local-storage-operator.v4.14.0-202407021509
 
-      #    odf:
-      #      name: odf-operator
-      #      namespace: openshift-storage
-      #      channel: stable-4.14
-      #      csv: odf-operator.v4.14.9-rhodf
+    odf:
+      name: odf-operator
+      namespace: openshift-storage
+      channel: stable-4.14
+      csv: odf-operator.v4.14.9-rhodf
 
       #    cnv:
       #      name: kubevirt-hyperconverged
@@ -195,11 +195,11 @@ clusterGroup:
       #path: charts/mgt-hub/cnv
       #project: hub
 
-      #    odf:
-      #      name: odf
-      #      namespace: openshift-storage
-      #      path: charts/mgt-hub/openshift-data-foundations
-      #      project: hub
+    odf:
+      name: odf
+      namespace: openshift-storage
+      path: charts/mgt-hub/openshift-data-foundations
+      project: hub
 
     lso:
       name: local-storage
