Deploy storage sistem

--- a/charts/mgt-hub/openshift-data-foundations/values.yaml
+++ b/charts/mgt-hub/openshift-data-foundations/values.yaml
@@ -18,7 +18,7 @@ toolbox:
 
 #Define the odf storageSystem parameters
 storageSystem:
-  deploy: false
+  deploy: true
   name: ocs-storagecluster-storagesystem
   namespace: openshift-storage
   spec:
