--- a/charts/mgt-hub/openshift-data-foundations/templates/odf-storagecluster.yaml
+++ b/charts/mgt-hub/openshift-data-foundations/templates/odf-storagecluster.yaml
@@ -58,6 +58,10 @@ kind: StorageCluster
 metadata:
   name: ocs-storagecluster
   namespace: openshift-storage
+  annotations:
+    cluster.ocs.openshift.io/local-devices: "true"
+    uninstall.ocs.openshift.io/cleanup-policy: delete
+    uninstall.ocs.openshift.io/mode: graceful
 spec:
   arbiter: {}
   encryption:
