--- a/charts/mgt-hub/openshift-data-foundations/templates/odf-storagecluster.yaml
+++ b/charts/mgt-hub/openshift-data-foundations/templates/odf-storagecluster.yaml
@@ -1,107 +1,50 @@
-#apiVersion: ocs.openshift.io/v1
-#kind: StorageCluster
-#metadata:
-#  namespace: {{ .Values.odf.namespace }}
-#  name: ocs-storagecluster
-#spec:
-#  resources:
-#    mon:
-#      requests:
-#        cpu: {{ .Values.odf.mon.requests.cpu | squote }}
-#        memory: {{ .Values.odf.mon.requests.memory }}
-#    mds:
-#      requests:
-#        cpu: {{ .Values.odf.mds.requests.cpu | squote }}
-#        memory: {{ .Values.odf.mds.requests.memory }}
-#    mgr:
-#      requests:
-#        cpu: {{ .Values.odf.mgr.requests.cpu | squote }}
-#        memory: {{ .Values.odf.mgr.requests.memory }}
-#    noobaa-core:
-#      requests:
-#        cpu: {{ .Values.odf.noobaacore.requests.cpu | squote }}
-#        memory: {{ .Values.odf.noobaacore.requests.memory }}
-#    noobaa-db:
-#      requests:
-#        cpu: {{ .Values.odf.noobaadb.requests.cpu | squote }}
-#        memory: {{ .Values.odf.noobaadb.requests.memory }}
-#  storageDeviceSets:
-#  - name: ocs-deviceset
-#    config: {}
-#    count: 1
-#    replica: 3
-#    resources:
-#      requests:
-#        cpu: {{ .Values.odf.osd.requests.cpu | squote }}
-#        memory: {{ .Values.odf.osd.requests.memory }}
-#    placement: {}
-#    preparePlacement: {}
-#    dataPVCTemplate:
-#      metadata: {}
-#      spec:
-#        storageClassName: {{ .Values.global.datacenter.storageClassName }}
-#        accessModes:
-#        - ReadWriteOnce
-#        volumeMode: Block
-#        resources:
-#          requests:
-#            storage: {{ .Values.odf.osd.pvc.storage }}
-#      status: {}
-#    portable: true
-#
-#
-#
-#
-#
 apiVersion: ocs.openshift.io/v1
 kind: StorageCluster
 metadata:
+  namespace: {{ .Values.odf.namespace }}
   name: ocs-storagecluster
-  namespace: openshift-storage
-  annotations:
-    cluster.ocs.openshift.io/local-devices: "true"
-    uninstall.ocs.openshift.io/cleanup-policy: delete
-    uninstall.ocs.openshift.io/mode: graceful
 spec:
-  arbiter: {}
-  encryption:
-    kms: {}
-  externalStorage: {}
-  flexibleScaling: true
-  managedResources:
-    cephBlockPools: {}
-    cephCluster: {}
-    cephConfig: {}
-    cephDashboard: {}
-    cephFilesystems: {}
-    cephNonResilientPools: {}
-    cephObjectStoreUsers: {}
-    cephObjectStores: {}
-    cephRBDMirror: {}
-    cephToolbox: {}
-  mirroring: {}
-  monDataDirHostPath: /var/lib/rook
-  network:
-    connections:
-      encryption: {}
-    multiClusterService: {}
-  nodeTopologies: {}
+  resources:
+    mon:
+      requests:
+        cpu: {{ .Values.odf.mon.requests.cpu | squote }}
+        memory: {{ .Values.odf.mon.requests.memory }}
+    mds:
+      requests:
+        cpu: {{ .Values.odf.mds.requests.cpu | squote }}
+        memory: {{ .Values.odf.mds.requests.memory }}
+    mgr:
+      requests:
+        cpu: {{ .Values.odf.mgr.requests.cpu | squote }}
+        memory: {{ .Values.odf.mgr.requests.memory }}
+    noobaa-core:
+      requests:
+        cpu: {{ .Values.odf.noobaacore.requests.cpu | squote }}
+        memory: {{ .Values.odf.noobaacore.requests.memory }}
+    noobaa-db:
+      requests:
+        cpu: {{ .Values.odf.noobaadb.requests.cpu | squote }}
+        memory: {{ .Values.odf.noobaadb.requests.memory }}
   storageDeviceSets:
-  - config: {}
-    count: 3
+  - name: ocs-deviceset
+    config: {}
+    count: 1
+    replica: 3
+    resources:
+      requests:
+        cpu: {{ .Values.odf.osd.requests.cpu | squote }}
+        memory: {{ .Values.odf.osd.requests.memory }}
+    placement: {}
+    preparePlacement: {}
     dataPVCTemplate:
       metadata: {}
       spec:
+        storageClassName: {{ .Values.global.datacenter.storageClassName }}
         accessModes:
         - ReadWriteOnce
+        volumeMode: Block
         resources:
           requests:
-            storage: "1"
-        storageClassName: localblock
-        volumeMode: Block
+            storage: {{ .Values.odf.osd.pvc.storage }}
       status: {}
-    name: ocs-deviceset-localblock
-    placement: {}
-    preparePlacement: {}
-    replica: 1
-    resources: {}
+    portable: true
