--- a/charts/mgt-hub/openshift-data-foundations/templates/odf-storagecluster.yaml
+++ b/charts/mgt-hub/openshift-data-foundations/templates/odf-storagecluster.yaml
@@ -49,7 +49,7 @@ spec:
               storage: '1'
           storageClassName: localblock
           volumeMode: Block
-      name: ocs-deviceset
+      name: local-block
       placement: {}
       portable: false
       replica: 1
