--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -73,11 +73,11 @@ clusterGroup:
       channel: stable-4.14
       csv: odf-operator.v4.14.9-rhodf
 
-      #    cnv:
-      #      name: kubevirt-hyperconverged
-      #      namespace: openshift-cnv
-      #      channel: stable
-      #      csv: kubevirt-hyperconverged-operator.v4.14.4
+    cnv:
+      name: kubevirt-hyperconverged
+      namespace: openshift-cnv
+      channel: stable
+      csv: kubevirt-hyperconverged-operator.v4.14.4
 
       #    quay:
       #      name: quay-operator
@@ -189,11 +189,11 @@ clusterGroup:
       path: charts/mgt-hub/nmstate
       project: hub
 
-      #cnv:
-      #name: kubevirt-hyperconverged
-      #namespace: openshift-cnv
-      #path: charts/mgt-hub/cnv
-      #project: hub
+    cnv:
+      name: kubevirt-hyperconverged
+      namespace: openshift-cnv
+      path: charts/mgt-hub/cnv
+      project: hub
 
     odf:
       name: odf
