--- a/charts/mgt-hub/acm/templates/multiclusterhub.yaml
+++ b/charts/mgt-hub/acm/templates/multiclusterhub.yaml
@@ -10,7 +10,7 @@ metadata:
     {{- end }}
 spec:
   availabilityConfig: High
-  disableHubSelfManagement: true
+  disableHubSelfManagement: false
   enableClusterBackup: false
   ingress: {}
   overrides:
