--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -61,17 +61,17 @@ clusterGroup:
       channel: stable
       csv: kubernetes-nmstate-operator.4.14.0-202411131205
 
-    lso:
-      name: local-storage-operator
-      namespace: openshift-local-storage
-      channel: stable
-      csv: local-storage-operator.v4.14.0-202411130434
+      #    lso:
+      #      name: local-storage-operator
+      #      namespace: openshift-local-storage
+      #      channel: stable
+      #      csv: local-storage-operator.v4.14.0-202411130434
 
-    odf:
-      name: odf-operator
-      namespace: openshift-storage
-      channel: stable-4.14
-      csv: odf-operator.v4.14.12-rhodf
+      #    odf:
+      #      name: odf-operator
+      #      namespace: openshift-storage
+      #      channel: stable-4.14
+      #      csv: odf-operator.v4.14.12-rhodf
 
         #    cnv:
         #      name: kubevirt-hyperconverged
@@ -202,17 +202,17 @@ clusterGroup:
         #      path: charts/mgt-hub/cnv
         #      project: hub
 
-    odf:
-      name: odf
-      namespace: openshift-storage
-      path: charts/mgt-hub/openshift-data-foundations
-      project: hub
+      #    odf:
+      #      name: odf
+      #      namespace: openshift-storage
+      #      path: charts/mgt-hub/openshift-data-foundations
+      #      project: hub
 
-    lso:
-      name: local-storage
-      namespace: openshift-local-storage
-      path: charts/mgt-hub/lso
-      project: hub
+      #    lso:
+      #      name: local-storage
+      #      namespace: openshift-local-storage
+      #      path: charts/mgt-hub/lso
+      #      project: hub
 
       #quay:
       #      name: quay
