--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -9,17 +9,17 @@ clusterGroup:
         operatorGroup: true
     - openshift-nmstate: #for NMstate
         operatorGroup: true
-    - openshift-local-storage: #for LSO
-        operatorGroup: true
-    - openshift-storage: #for ODF
-        operatorGroup: true
-    - openshift-cnv: #for CNF
-        operatorGroup: true
-    - quay-enterprise: #for quay
-        operatorGroup: true
+          #    - openshift-local-storage: #for LSO
+          #        operatorGroup: true
+          #    - openshift-storage: #for ODF
+          #        operatorGroup: true
+          #- openshift-cnv: #for CNF
+          #        operatorGroup: true
+          #    - quay-enterprise: #for quay
+          #        operatorGroup: true
     #- policies
-    - kafka-cluster: #for Kafka
-        operatorGroup: true
+    #    - kafka-cluster: #for Kafka
+    #        operatorGroup: true
     - openshift-logging:
         labels:
           openshift.io/cluster-monitoring: "true"
@@ -29,25 +29,25 @@ clusterGroup:
     - openshift-operators-redhat:
         operatorGroup: true
     # STF Namespaces
-    - service-telemetry:
-        operatorGroup: true
+    #    - service-telemetry:
+    #        operatorGroup: true
 
-    - cert-manager-operator:
-        operatorGroup: true
+          #    - cert-manager-operator:
+          #        operatorGroup: true
     # End of STF related namespaces
-    - prom-kafka-adapter: #for prometheus adapter
-        operatorGroup: true
-    - mgmt-apps: #for applications
-        operatorGroup: true
-    - ansible: #for ansible
-        operatorGroup: true
-    - rhacs-operator: #ACS
-        operatorGroup: true
-        targetNamespaces:
-    - stackrox: #ACS_Central
-        operatorGroup: true
-    - openshift-update-service:
-        operatorGroup: true
+    #    - prom-kafka-adapter: #for prometheus adapter
+    #        operatorGroup: true
+    #    - mgmt-apps: #for applications
+    #        operatorGroup: true
+          #    - ansible: #for ansible
+          #        operatorGroup: true
+          #    - rhacs-operator: #ACS
+          #        operatorGroup: true
+          #        targetNamespaces:
+          #    - stackrox: #ACS_Central
+          #        operatorGroup: true
+          #    - openshift-update-service:
+          #        operatorGroup: true
 
   subscriptions:
     acm:
@@ -99,10 +99,10 @@ clusterGroup:
       #      namespace: cert-manager-operator
       #      channel: stable-v1
 
-    service-telemetry:
-      name: service-telemetry-operator
-      namespace: service-telemetry
-      channel: stable-1.5
+        #    service-telemetry:
+        #      name: service-telemetry-operator
+        #      namespace: service-telemetry
+        #      channel: stable-1.5
 
     grafana:
       name: grafana-operator
@@ -244,11 +244,11 @@ clusterGroup:
       #      path: charts/mgt-hub/logging
       #      project: hub
 
-    stf:
-      name: stf
-      namespace: service-telemetry
-      path: charts/mgt-hub/stf
-      project: hub
+        #    stf:
+        #      name: stf
+        #      namespace: service-telemetry
+        #      path: charts/mgt-hub/stf
+        #      project: hub
 
       #    vms:
       #      name: vms
